--- a/packages/web-components/src/components/content-section/content-section.scss
+++ b/packages/web-components/src/components/content-section/content-section.scss
@@ -5,36 +5,4 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@use '@carbon/styles/scss/breakpoint' as *;
-@use '@carbon/styles/scss/config' as *;
-@use '@carbon/styles/scss/spacing' as *;
-// @use '@carbon/ibmdotcom-styles/scss/internal/content-section';
 @use '../../../../styles/scss/internal/content-section';
-@use '@carbon/ibmdotcom-styles/scss/globals/vars' as *;
-
-:host(#{$c4d-prefix}-content-section),
-:host(#{$c4d-prefix}-card-section-carousel),
-:host(#{$c4d-prefix}-content-section-heading),
-:host(#{$c4d-prefix}-content-section-copy) {
-  display: block;
-  overflow-x: hidden;
-}
-
-:host(#{$c4d-prefix}-content-section) {
-  &[with-link-list] {
-    .#{$prefix}--content-section__body {
-      padding: 0 $spacing-05;
-    }
-  }
-
-  ::slotted(#{$c4d-prefix}-content-block-simple) {
-    padding-bottom: $spacing-10;
-  }
-
-  ::slotted(#{$c4d-prefix}-link-list) {
-    @include breakpoint-down(md) {
-      display: block;
-      margin: 0 $spacing-05;
-    }
-  }
-}
